# picture_comparison

./: CMakeLists.txt  README.md  main.cpp
compare/: CMakeLists.txt  HistogramCompare.cpp  HistogramCompare.h
